Closed Bug 1304457 Opened 8 years ago Closed 8 years ago

RemoteContentController::Destroy should set mCanSend = false

Categories

(Core :: Graphics: Layers, defect, P2)

51 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox49 --- unaffected
firefox50 --- unaffected
firefox51 --- fixed
firefox52 --- fixed

People

(Reporter: kats, Assigned: kats)

References

Details

(Keywords: regression, Whiteboard: [gfx-noted])

Attachments

(2 files)

Quoting bug 1272942 comment 33:

> I reproduced in rr and it looks like mCanSend should be getting set to false
> in RemoteContentController::Destroy(). When that function calls SendDestroy,
> it sends a destroy message to APZChild which promptly deletes itself during
> the processing of that message. So the parent side shouldn't be sending any
> more messages to the child after it has called SendDestroy().

Also while I'm here I'm going to fix bug 1298954 comment 8:

> At least one thing wrong with the code in RemoteContentController is that it
> doesn't have mCanSend checks on a few functions - including
> SetScrollingRootContent.
Regression from bug 1289650.
Blocks: 1289650
Keywords: regression
OS: Unspecified → All
Priority: -- → P2
Hardware: Unspecified → All
Whiteboard: [gfx-noted]
Comment on attachment 8793413 [details]
Bug 1304457 - Ensure that RemoteContentController doesn't try to send any messages after it has sent the Destroy message.

https://reviewboard.mozilla.org/r/80154/#review78822
Attachment #8793413 - Flags: review?(dvander) → review+
Comment on attachment 8793414 [details]
Bug 1304457 - Add some missing mCanSend checks.

https://reviewboard.mozilla.org/r/80156/#review78824
Attachment #8793414 - Flags: review?(dvander) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3c3920483acd
Ensure that RemoteContentController doesn't try to send any messages after it has sent the Destroy message. r=dvander
https://hg.mozilla.org/integration/autoland/rev/ab5ccadf750e
Add some missing mCanSend checks. r=dvander
https://hg.mozilla.org/mozilla-central/rev/3c3920483acd
https://hg.mozilla.org/mozilla-central/rev/ab5ccadf750e
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment on attachment 8793413 [details]
Bug 1304457 - Ensure that RemoteContentController doesn't try to send any messages after it has sent the Destroy message.

Approval Request Comment
[Feature/regressing bug #]: bug 1289650
[User impact if declined]: sporadic crashes
[Describe test coverage new/current, TreeHerder]: some automated tests were intermittently crashing because of this bug (see bug 1272942), so this code is exercised in automation
[Risks and why]: pretty low risk, code is well understood and the bug appears to be have been a simple oversight
[String/UUID change made/needed]: none
Attachment #8793413 - Flags: approval-mozilla-aurora?
Attachment #8793414 - Flags: approval-mozilla-aurora?
Comment on attachment 8793413 [details]
Bug 1304457 - Ensure that RemoteContentController doesn't try to send any messages after it has sent the Destroy message.

This patch fixes a regression. Take it in 51 aurora.
Attachment #8793413 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Attachment #8793414 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Can you please request Beta approval for this given bug 1272942 comment 40? Thanks!
Flags: needinfo?(bugmail)
This patch won't apply to beta. As far as I can tell the beta code doesn't suffer from this problem. I commented on bug 1272942.
Flags: needinfo?(bugmail)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: