Bug 1304457 - Ensure that RemoteContentController doesn't try to send any messages after it has sent the Destroy message. r=dvander a=gchang

MozReview-Commit-ID: 2tEb6nU049R