gfx/layers/ipc/RemoteContentController.cpp
@@ -213,6 +213,7 @@ void
 RemoteContentController::Destroy()
 {
   if (mCanSend) {
+    mCanSend = false;
     Unused << SendDestroy();
   }
 }
